--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -5,25 +5,42 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/diary" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="hours_slept" name="hours_slept" placeholder="Number of Hours Slept" type="text">
-        </div>
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="snoozes" name="snoozes" placeholder="Number of Alarm Snoozes" type="text">
-        </div>
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="sleep_quality" name="sleep_quality" placeholder="Quality of Sleep" type="text">
-        </div>
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="mood" name="mood" placeholder="Morning Wake-Up Mood" type="text">
-        </div>
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="daily_goals" name="daily_goals" placeholder="Goals for Today" type="text">
-        </div>
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="dream" name="dream" placeholder="Record your dream" type="text">
-        </div>
-        <button class="btn btn-primary" type="submit">Submit Diary</button>
-    </form>
+<form action="/diary" method="post">
+    <!-- <div class="mb-3">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="hours_slept" name="hours_slept" placeholder="Number of Hours Slept" type="text">
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="snoozes" name="snoozes" placeholder="Number of Alarm Snoozes" type="text">
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="sleep_quality" name="sleep_quality" placeholder="Quality of Sleep" type="text">
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="mood" name="mood" placeholder="Morning Wake-Up Mood" type="text">
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="daily_goals" name="daily_goals" placeholder="Goals for Today" type="text">
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="dream" name="dream" placeholder="Record your dream" type="text"> -->
+    <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">how many hours did you sleep last night?</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="input a number!">
+    </div>
+    <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">how many times did you snooze your alarm this morning? (hint: dont lie!)</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="input a number!">
+    </div>
+    <!--something for sleep quality and sleeping mood-->
+    <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">what are your goals for today?</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="be brave, be bold, and be courageous!">
+    </div>
+    <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">did you have a dream last night? do you remember it?</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="record your dream last night if you remember :)">
+    </div>
+    </div>
+    <button class="btn btn-primary" type="submit">Submit Diary</button>
+</form>
 {% endblock %}
