--- a/final/static/styles.css
+++ b/final/static/styles.css
@@ -55,156 +55,150 @@ body
     background: linear-gradient(to right, #b24592, #f15f79)
 }
 
-.navbar
-{
-    overflow: hidden;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+HTML SCSS JSResult Skip Results Iframe
+EDIT ON
+*, :before,:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-.menu-toggler {
-position: absolute;
-display: block;
-top:0;
-bottom:0;
-right:0;
-left:0;
-margin:auto;
-width:40px;
-height:40px;
-z-index:2;
-opacity:0;
-cursor:pointer;
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
+  font-size: 16px;   
+  line-height: 1.458;
+  background: #FeFeFe;
 }
-.menu-toggler:hover + label,
-.menu-toggler:hover + label:before,
-.menu-toggler:hover + label:after,{
-background: white;
+
+h1 {
+  font-size: 2em;
+  margin: 0;
+  line-height: 1;
 }
-.menu-toggler:checked + label {
-background: transparent;
+
+.body {
+  -webkit-box-shadow: 0 0 20px 0 rgba(0,0,0,.3);
+  box-shadow: 0 0 20px 0 rgba(0,0,0,.3);
+  max-width: 320px;
+  margin: 0 auto;
 }
-.menu-toggler:checked + label:before,
-.menu-toggler:checked + label:after,{
-top:0;
-width:40px;
-transform-origin: 50% 50%;
+
+.navbar-brand, .sr-only {display: none;}
+
+.navbar-toggle {
+  display: block;
+  position: relative;
+  background: #dbdcdf;
+  padding: 4px;
+  cursor: pointer;
+  border: 0px;
+  margin: 0;
+  border-radius: 0 0 12px 0;
+  min-height: 50px;
+  min-width: 50px;
+  box-shadow: 1px 1px 2px 0 rgba(0,0,0,.2);
+  outline: none;
+  .icon-bar {
+    background: #868d97;
+    height: 6px;
+    width: 30px;
+    display: block;
+    margin-top: 5px;
+    border-radius: 3px;
+    position: relative;
+    transition: all .3s ease;
+    &:first-of-type {
+      margin-top: 0;
+    }
+    &:after {
+      content: "";
+      width: 6px;
+      height: 6px;
+      background: #868d97;
+      position: absolute;
+      right: -8px;
+      border-radius: 3px;
+    }
+  }
 }
-.menu-toggler:checked + label:before {
-transform: rotate(45deg) translateY(-15px) translateX(-15px);
+
+.close {
+  display: none;
+  position: absolute;
+  right: 12px;
+  top: 12px;
+  font-size: 24px;
+  font-weight: 900;
+  color: #d0112b;
+  border: 4px solid #d0112b;
+  padding: 2px;
+  border-radius: 100%;
+  width:  40px;
+  height: 40px;
+  line-height: 29px;
 }
-.menu-toggler:checked + label:after {
-transform: rotate(-45deg);
+
+ .site-nav {
+  background: #d0112b;
+  border-radius: 0;
+  border: none;
+  margin: 0 auto;;
+  width: 100%;
+  font-size: 24px;
+  font-weight: 700;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  overflow-y: visible;
+  position: relative;
+  max-height: 50px;
+  max-width: 480px;
+  box-shadow: 0 2px 1px 0 rgba(0,0,0,.1);
 }
-.menu-toggler:checked ~ ul .menu-item { 
-opacity: 1;
+
+.navbar-mobile {
+  display: inline-block;
+  position: relative;
 }
-.menu-toggler:checked ~ ul .menu-item:nth-child(1) {
-transform: rotate(0deg) translate(-110px);
+
+.collapse {visibility: hidden;}
+
+.open {visibility: visible;}
+
+.navbar {
+  max-width: 50vw;
+  position: absolute;
+  top: 30px;
+  z-index: 200;
 }
-.menu-toggler:checked ~ ul .menu-item:nth-child(2) {
-transform: rotate(60deg) translateX(-110px);
+
+ul {
+  margin: 0;
+  padding: 0;
 }
-.menu-toggler:checked ~ ul .menu-item:nth-child(3) {
-transform: rotate(120deg) translateX(-110px);
+
+.navbar li {
+  text-align: left;
+  display: block;
+  min-height: 50px; 
+  line-height: 50px;
+  margin-left: 40px;
+  a, a:visited {
+    color: #868d97;
+    text-decoration: none;
+    &:hover {
+      color: #d0112b;
+    }
+  }
 }
-.menu-toggler:checked ~ ul .menu-item:nth-child(4) {
-transform: rotate(180deg) translateX(-110px);
-}
-.menu-toggler:checked ~ ul .menu-item:nth-child(5) {
-transform: rotate(240deg) translateX(-110px);
-}
-.menu-toggler:checked ~ ul .menu-item:nth-child(6) {
-transform: rotate(300deg) translateX(-110px);
-}
-.menu-toggler:checked ~ ul .menu-item a {
-pointer-events:auto;
-}
-.menu-toggler + label {
-width: 40px;
-height: 5px;
-display: block;
-z-index: 1;
-border-radius: 2.5px;
-background: rgba(230, 239, 250, 0.9);
-transition: transform 0.5s top 0.5s;
-position: absolute;
-display: block;
-top: 0;
-bottom: 0;
-left: 0;
-right: 0;
-margin: auto;
-}
-.menu-toggler + label:before,
-.menu-toggler + label:after {
-width: 40px;
-height: 5px;
-display: block;
-z-index: 1;
-border-radius: 2.5px;
-background: rgba(255, 255, 255, 0.7);
-transition: transform 0.5s top 0.5s;
-content: "";
-position: absolute;
-display: block;
-left: 0;
-}
-.menu-toggler + label:before {
-top: 10px;
-}
-.menu-toggler + label:after {
-top: -10px;
-}
-.menu-item:nth-child(1) a {
-transform: rotate(0deg);
-}
-.menu-item:nth-child(2) a {
-transform: rotate(-60deg);
-}
-.menu-item:nth-child(3) a {
-transform: rotate(-120deg);
-}
-.menu-item:nth-child(4) a {
-transform: rotate(-180deg);
-}
-.menu-item:nth-child(5) a {
-transform: rotate(-240deg);
-}
-.menu-item:nth-child(6) a {
-transform: rotate(-300deg);
-}
-.menu-item {
-position: absolute;
-display: block;
-top: 0;
-bottom: 0;
-left: 0;
-right: 0;
-margin: auto;
-width: 80px;
-height: 80px;
-opacity: 0;
-transition: 0.5s;
-}
-.menu-item a {
-display: block;
-width: inherit;
-height: inherit;
-line-height: 80px;
-color: rgba(255, 255, 255, 0.7);
-background: rgba(230, 230, 250, 0.7);
-border-radius: 50%;
-text-align: center;
-text-decoration: none;
-font-size: 40px;
-pointer-events: none;
-transition: 0.2s;
-}
-.menu-item a:hover {
-box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.3);
-color: white;
-background: rgba(255, 255, 255, 0.3);
-font-size: 44.44px
+
+.content {
+  max-width: 480px;
+  color: #FeFeFe;
+  margin: 0 auto;
+  background: #333;
+  padding: 32px 20px;
+  h1{ 
+  color: #7d7d7d;
+  }
 }
