--- a/final/templates/layout.html
+++ b/final/templates/layout.html
@@ -11,6 +11,11 @@
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
 
+        <!--Nav Bar-->
+        <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
         <!-- CHANGE THIS -->
         <!-- https://favicon.io/emoji-favicons/money-bag/ -->
         <link href="/static/favicon.ico" rel="icon">
@@ -39,22 +44,11 @@
     <body>
 
         <nav class="menu">
-            <input checked="checked" class="menu-toggler" type="checkbox">
-            <label for="menu-toggler"></label>
-            <ul>
-                <li class="menu-item">
-                <a class="fas fa-cat" href="/login"></a>
-                </li>
-                <li class="menu-item">
-                <a class="fas fa-cookie-bite" href="/diary"></a>
-                </li>
-                <li class="menu-item">
-                <a class="fab fa-earlybirds" href="/log"></a>
-                </li>
-                <li class="menu-item">
-                <a class="fab fa-fly"href="/resources"></a>
-                </li>
-            </ul>
+            <a href="#link">Home</a>
+            <a href="#link">Work</a>
+            <a href="#link">Links</a>
+            <a href="#link">Contact</a>
+            <a href="#link">About</a>
         </nav>
 
         <!--Page title-->
