--- a/final/static/styles.css
+++ b/final/static/styles.css
@@ -48,163 +48,75 @@ button
     transform: scale(1.05);
 }
 
-body
-{
-    overflow: hidden;
-    background: white;
-    background: linear-gradient(to right, #b24592, #f15f79)
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
+body {
+  font: 100% Roboto, sans-serif;
+  background: url(http://wallpapercave.com/wp/aZlqiAT.png) 50% 50% no-repeat;
+  background-size: cover;
+  padding: 50px;
+  margin: 0;
 }
 
-.navbar
-{
-    overflow: hidden;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+nav {
+  width: 300px;
+  background: white;
+  color: rgba(0, 0, 0, 0.87);
+  -webkit-clip-path: circle(24px at 30px 24px);
+  clip-path: circle(24px at 32px 24px);
+  -webkit-transition: -webkit-clip-path 0.5625s, clip-path 0.375s;
+  transition: -webkit-clip-path 0.5625s, clip-path 0.375s;
 }
 
-.menu-toggler {
-    position: absolute;
-    display: block;
-    top:0;
-    bottom:0;
-    right:0;
-    left:0;
-    margin:auto;
-    width:40px;
-    height:40px;
-    z-index:2;
-    opacity:0;
-    cursor:pointer;
-    }
-    .menu-toggler:hover + label,
-    .menu-toggler:hover + label:before,
-    .menu-toggler:hover + label:after,{
-    background: white;
-    }
-    .menu-toggler:checked + label {
-    background: transparent;
-    }
-    .menu-toggler:checked + label:before,
-    .menu-toggler:checked + label:after,{
-    top:0;
-    width:40px;
-    transform-origin: 50% 50%;
-    }
-    .menu-toggler:checked + label:before {
-    transform: rotate(45deg) translateY(-15px) translateX(-15px);
-    }
-    .menu-toggler:checked + label:after {
-    transform: rotate(-45deg);
-    }
-    .menu-toggler:checked ~ ul .menu-item { 
-    opacity: 1;
-    }
-    .menu-toggler:checked ~ ul .menu-item:nth-child(1) {
-    transform: rotate(0deg) translate(-110px);
-    }
-    .menu-toggler:checked ~ ul .menu-item:nth-child(2) {
-    transform: rotate(60deg) translateX(-110px);
-    }
-    .menu-toggler:checked ~ ul .menu-item:nth-child(3) {
-    transform: rotate(120deg) translateX(-110px);
-    }
-    .menu-toggler:checked ~ ul .menu-item:nth-child(4) {
-    transform: rotate(180deg) translateX(-110px);
-    }
-    .menu-toggler:checked ~ ul .menu-item:nth-child(5) {
-    transform: rotate(240deg) translateX(-110px);
-    }
-    .menu-toggler:checked ~ ul .menu-item:nth-child(6) {
-    transform: rotate(300deg) translateX(-110px);
-    }
-    .menu-toggler:checked ~ ul .menu-item a {
-    pointer-events:auto;
-    }
-    .menu-toggler + label {
-    width: 40px;
-    height: 5px;
-    display: block;
-    z-index: 1;
-    border-radius: 2.5px;
-    background: rgba(230, 239, 250, 0.9);
-    transition: transform 0.5s top 0.5s;
-    position: absolute;
-    display: block;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    }
-    .menu-toggler + label:before,
-    .menu-toggler + label:after {
-    width: 40px;
-    height: 5px;
-    display: block;
-    z-index: 1;
-    border-radius: 2.5px;
-    background: rgba(255, 255, 255, 0.7);
-    transition: transform 0.5s top 0.5s;
-    content: "";
-    position: absolute;
-    display: block;
-    left: 0;
-    }
-    .menu-toggler + label:before {
-    top: 10px;
-    }
-    .menu-toggler + label:after {
-    top: -10px;
-    }
-    .menu-item:nth-child(1) a {
-    transform: rotate(0deg);
-    }
-    .menu-item:nth-child(2) a {
-    transform: rotate(-60deg);
-    }
-    .menu-item:nth-child(3) a {
-    transform: rotate(-120deg);
-    }
-    .menu-item:nth-child(4) a {
-    transform: rotate(-180deg);
-    }
-    .menu-item:nth-child(5) a {
-    transform: rotate(-240deg);
-    }
-    .menu-item:nth-child(6) a {
-    transform: rotate(-300deg);
-    }
-    .menu-item {
-    position: absolute;
-    display: block;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 80px;
-    height: 80px;
-    opacity: 0;
-    transition: 0.5s;
-    }
-    .menu-item a {
-    display: block;
-    width: inherit;
-    height: inherit;
-    line-height: 80px;
-    color: rgba(255, 255, 255, 0.7);
-    background: rgba(230, 230, 250, 0.7);
-    border-radius: 50%;
-    text-align: center;
-    text-decoration: none;
-    font-size: 40px;
-    pointer-events: none;
-    transition: 0.2s;
-    }
-    .menu-item a:hover {
-    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.3);
-    color: white;
-    background: rgba(255, 255, 255, 0.3);
-    font-size: 44.44px
-    }
+nav:hover {
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+  -webkit-transition-duration: 0.75s;
+  transition-duration: 0.75s;
+  -webkit-clip-path: circle(390px at 225px 24px);
+  clip-path: circle(390px at 150px 24px);
+}
+
+a {
+  display: block;
+  line-height: 50px;
+  padding: 0 20px;
+  color: inherit;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+a:hover { background: #ffe082; }
+
+a:active { background: #ffca28; }
+
+.navicon {
+  padding: 23px 20px;
+  cursor: pointer;
+  -webkit-transform-origin: 32px 24px;
+  -ms-transform-origin: 32px 24px;
+  transform-origin: 32px 24px;
+}
+
+.navicon div {
+  position: relative;
+  width: 20px;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.87);
+}
+
+.navicon div:before,
+.navicon div:after {
+  display: block;
+  content: "";
+  width: 20px;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.87);
+  position: absolute;
+}
+
+.navicon div:before { top: -7px; }
+
+.navicon div:after { top: 7px; }
