--- a/final/templates/layout.html
+++ b/final/templates/layout.html
@@ -38,12 +38,27 @@
 
     <body>
 
-        <nav class="menu">
-            <a href="#link">Home</a>
-            <a href="#link">Work</a>
-            <a href="#link">Links</a>
-            <a href="#link">Contact</a>
-            <a href="#link">About</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">SleepS50</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/login">log in <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/diary">diary</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/history">log</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="/resources">resources</a>
+                </li>
+              </ul>
+            </div>
         </nav>
 
         <!--Page title-->
