--- a/final/templates/layout.html
+++ b/final/templates/layout.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/login">log in <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/login">log in</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/diary">diary</a>
@@ -55,7 +55,7 @@
                   <a class="nav-link" href="/history">log</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="/resources">resources</a>
+                  <a class="nav-link" href="/resources">resources</a>
                 </li>
               </ul>
             </div>
@@ -65,6 +65,8 @@
         <div class = "header">
             <p class="title">SleepS50</p>
         </div>
+
+        <img src="/photos/SleepS50.jpg" alt="SleepS50" style="width: 300px">
 
         {% if get_flashed_messages() %}
             <header>
