--- a/final/templates/layout.html
+++ b/final/templates/layout.html
@@ -66,7 +66,10 @@
             <p class="title">SleepS50</p>
         </div>
 
-        <img src="/photos/SleepS50.jpg" alt="SleepS50" style="width: 300px">
+        <body>
+            <img src="photos/SleepS50.jpg" alt="SleepS50" style="width: 300px"/>  
+        </body>
+        
 
         {% if get_flashed_messages() %}
             <header>
