--- a/final/templates/layout.html
+++ b/final/templates/layout.html
@@ -39,7 +39,7 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">SleepS50</a>
+            <a class="navbar-brand" href="/index">SleepS50</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -62,14 +62,7 @@
         </nav>
 
         <!--Page title-->
-        <div class = "header">
-            <p class="title">SleepS50</p>
-        </div>
-
-        <body>
-            <img src="photos/SleepS50.jpg" alt="SleepS50" style="width: 300px"/>  
-        </body>
-        
+        <img src="/static/SleepS50.jpg" alt="SleepS50" width="100%""> 
 
         {% if get_flashed_messages() %}
             <header>
