--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -23,7 +23,11 @@
     </div>
     <div class="mb-3">
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="dream" name="dream" placeholder="Record your dream" type="text"> -->
-    
+
+    <div class = "header">
+        <p class="title">SleepS50</p>
+    </div>
+
     <div class="mb-3">
         <label for="formGroupExampleInput" class="form-label">how many hours did you sleep last night?</label>
         <input type="text" class="form-control" id="hours_slept" name="hours_slept" placeholder="input a number!">
