--- a/final/templates/index.html
+++ b/final/templates/index.html
@@ -5,14 +5,11 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container">
-        <br>
-        <br>
-        <h4>Welcome!</h4>
-        <div class="row">
-            <div class="col-sm">
-                <img alt="cat" src="photos/errorcat.jpg" style="width: 300px">
-            </div>
-        </div>
-    </div>
+
+<body>
+        <!--Page title-->
+        <img src="/photos/SleepS50.jpg" alt="SleepS50" width="100%""> 
+</body>
+ 
+
 {% endblock %}
