--- a/final/templates/register.html
+++ b/final/templates/register.html
@@ -15,6 +15,6 @@
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Verify Password" type="text">
         </div>
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-primary" type="submit">register</button>
     </form>
 {% endblock %}
