--- a/final/templates/register.html
+++ b/final/templates/register.html
@@ -7,14 +7,14 @@
 {% block main %}
     <form action="/register" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="username" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="text">
+            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="password" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Verify Password" type="text">
+            <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="verify password" type="text">
         </div>
-        <button class="btn btn-primary" type="submit">register</button>
+        <button class="btn btn-primary buttonStyle" type="submit">register</button>
     </form>
 {% endblock %}
