--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<form action="/diary" method="post" class="formStyle">
+<form action="/diary" method="post">
     <!-- <div class="mb-3">
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="hours_slept" name="hours_slept" placeholder="Number of Hours Slept" type="text">
     </div>
@@ -46,6 +46,6 @@
         <input type="text" class="form-control" id="dream" name="dream" placeholder="record your dream last night if you remember :)">
     </div>
     </div>
-    <button class="btn btn-primary buttonStyle" type="submit">Submit Diary</button>
+    <button class="btn btn-primary buttonStyle" type="submit">submit diary</button>
 </form>
 {% endblock %}
