--- a/final/templates/login.html
+++ b/final/templates/login.html
@@ -7,11 +7,11 @@
 {% block main %}
     <form action="/login" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="username" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
+            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">log in</button>
+        <button class="btn btn-primary buttonStyle" type="submit">log in</button>
     </form>
 {% endblock %}
