--- a/final/templates/resources.html
+++ b/final/templates/resources.html
@@ -5,12 +5,45 @@
 {% endblock %}
 
 {% block main %}
-    <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
-        <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+        <div class="card">
+            <img src="INSERT" class="card-img-top" alt="INSERT">
+            <div class="card-body">
+            <h4 class="card-title centered">meditation</h4>
+            <p class="card-text">Information</p>
+            </div>
+        </div>
+        </div>
+        <!--Source 2-->
+        <div class="col mb-4">
+        <div class="card">
+            <img src="INSERT" class="card-img-top" alt="INSERT">
+            <div class="card-body">
+            <h4 class="card-title centered">title</h4>
+            <p class="card-text">Information</p>
+            </div>
+        </div>
+        </div>
+        <!--Source 3-->
+        <div class="col mb-4">
+        <div class="card">
+            <img src="INSERT" class="card-img-top" alt="INSERT">
+            <div class="card-body">
+            <h4 class="card-title centered">title</h4>
+            <p class="card-text">Information</p>
+            </div>
+        </div>
+        </div>
+        <!--Source 4-->
+        <div class="col mb-4">
+        <div class="card">
+            <img src="INSERT" class="card-img-top" alt="INSERT">
+            <div class="card-body">
+            <h4 class="card-title centered">title</h4>
+            <p class="card-text">Information</p>
+            </div>
+        </div>
         </div>
     </div>
 {% endblock %}
