blah blah again

--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -6,24 +6,6 @@
 
 {% block main %}
 <form action="/diary" method="post">
-    <!-- <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="hours_slept" name="hours_slept" placeholder="Number of Hours Slept" type="text">
-    </div>
-    <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="snoozes" name="snoozes" placeholder="Number of Alarm Snoozes" type="text">
-    </div>
-    <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="sleep_quality" name="sleep_quality" placeholder="Quality of Sleep" type="text">
-    </div>
-    <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="mood" name="mood" placeholder="Morning Wake-Up Mood" type="text">
-    </div>
-    <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="daily_goals" name="daily_goals" placeholder="Goals for Today" type="text">
-    </div>
-    <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="dream" name="dream" placeholder="Record your dream" type="text"> -->
-
     <div class = "header">
         <p class="title">SleepS50</p>
     </div>
@@ -37,6 +19,24 @@
         <input type="text" class="form-control" id="snoozes" name="snoozes" placeholder="input a number!">
     </div>
     <!--something for sleep quality and sleeping mood-->
+    <!--sleep quality-->
+    <div class="mb-3">
+        How was your sleep last night?
+        <button id="sleep_quality" name="sleep_quality" type="submit" value="1">BEST NIGHT EVER!</button>
+        <button id="sleep_quality" name="sleep_quality" type="submit" value="2">Good</button>
+        <button id="sleep_quality" name="sleep_quality" type="submit" value="3">Eh...It was okay</button>
+        <button id="sleep_quality" name="sleep_quality" type="submit" value="4">Not so good</button>
+        <button id="sleep_quality" name="sleep_quality" type="submit" value="5">Didn't sleep a wink T_T</button>
+    </div>
+    <div class="mb-3">
+        Your morning mood? 
+        <button id="mood" name="mood" type="submit" value="1">&#128518</button> 
+        <button id="mood" name="mood" type="submit" value="2">&#128522</button> 
+        <button id="mood" name="mood" type="submit" value="3">&#128528</button> 
+        <button id="mood" name="mood" type="submit" value="4">&#128554</button> 
+        <button id="mood" name="mood" type="submit" value="5">&#128579</button> 
+        <button id="mood" name="mood" type="submit" value="6">&#128580</button> 
+    </div>
     <div class="mb-3">
         <label for="formGroupExampleInput2" class="form-label">what are your goals for today?</label>
         <input type="text" class="form-control" id="daily_goals" name="daily_goals" placeholder="be brave, be bold, and be courageous!">
