--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -22,25 +22,33 @@
     <!--sleep quality-->
     <div class="mb-3">
         How was your sleep last night?
-        <button id="sleep_quality" name="sleep_quality" type="submit" value="1">BEST NIGHT EVER!</button>
-        <button id="sleep_quality" name="sleep_quality" type="submit" value="2">Good</button>
-        <button id="sleep_quality" name="sleep_quality" type="submit" value="3">Eh...It was okay</button>
-        <button id="sleep_quality" name="sleep_quality" type="submit" value="4">Not so good</button>
-        <button id="sleep_quality" name="sleep_quality" type="submit" value="5">Didn't sleep a wink T_T</button>
+        <button id="sleep" name="sleep" type="submit" value="1">BEST NIGHT EVER!</button>
+        <button id="sleep" name="sleep" type="submit" value="2">Good</button>
+        <button id="sleep" name="sleep" type="submit" value="3">Eh...It was okay</button>
+        <button id="sleep" name="sleep" type="submit" value="4">Not so good</button>
+        <button id="sleep" name="sleep" type="submit" value="5">Didn't sleep a wink T_T</button>
     </div>
     <div class="mb-3">
         Your morning mood? 
-        <button id="mood" name="mood" type="submit" value="1">&#128518</button> 
-        <button id="mood" name="mood" type="submit" value="2">&#128522</button> 
-        <button id="mood" name="mood" type="submit" value="3">&#128528</button> 
-        <button id="mood" name="mood" type="submit" value="4">&#128554</button> 
-        <button id="mood" name="mood" type="submit" value="5">&#128579</button> 
-        <button id="mood" name="mood" type="submit" value="6">&#128580</button> 
+        <button id="vibe" name="vibe" type="submit" value="1">&#128518</button> 
+        <button id="vibe" name="vibe" type="submit" value="2">&#128522</button> 
+        <button id="vibe" name="vibe" type="submit" value="3">&#128528</button> 
+        <button id="vibe" name="vibe" type="submit" value="4">&#128554</button> 
+        <button id="vibe" name="vibe" type="submit" value="5">&#128579</button> 
+        <button id="vibe" name="vibe" type="submit" value="6">&#128580</button> 
     </div>
     <div class="mb-3">
         <label for="formGroupExampleInput2" class="form-label">what are your goals for today?</label>
         <input type="text" class="form-control" id="daily_goals" name="daily_goals" placeholder="be brave, be bold, and be courageous!">
+    </div> 
+    <!-- <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">what are your goals for today?</label>
+        <input type="text" class="form-control" id="sleep_quality" name="sleep_quality" placeholder="be brave, be bold, and be courageous!">
     </div>
+    <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">what are your goals for today?</label>
+        <input type="text" class="form-control" id="mood" name="mood" placeholder="be brave, be bold, and be courageous!">
+    </div> -->
     <div class="mb-3">
         <label for="formGroupExampleInput2" class="form-label">did you have a dream last night? do you remember it?</label>
         <input type="text" class="form-control" id="dream" name="dream" placeholder="record your dream last night if you remember :)">
