--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -21,21 +21,45 @@
     <!--something for sleep quality and sleeping mood-->
     <!--sleep quality-->
     <div class="mb-3">
-        How was your sleep last night?
-        <button id="sleep" name="sleep" type="submit" value="1">BEST NIGHT EVER!</button>
+        <p>How was your sleep last night?</p>
+        <!-- <button id="sleep" name="sleep" type="submit" value="1">BEST NIGHT EVER!</button>
         <button id="sleep" name="sleep" type="submit" value="2">Good</button>
         <button id="sleep" name="sleep" type="submit" value="3">Eh...It was okay</button>
         <button id="sleep" name="sleep" type="submit" value="4">Not so good</button>
-        <button id="sleep" name="sleep" type="submit" value="5">Didn't sleep a wink T_T</button>
+        <button id="sleep" name="sleep" type="submit" value="5">Didn't sleep a wink T_T</button> -->
+        <input type="radio" id="sleep" name="sleep" value="1">
+        <label for="html">BEST NIGHT EVER!</label><br>
+        <input type="radio" id="sleep" name="sleep" value="1">
+        <label for="html">Good</label><br>
+        <input type="radio" id="sleep" name="sleep" value="1">
+        <label for="html">Eh...It was okay</label><br>
+        <input type="radio" id="sleep" name="sleep" value="1">
+        <label for="html">Not so good</label><br>
+        <input type="radio" id="sleep" name="sleep" value="1">
+        <label for="html">Didn't sleep a wink</label><br>
+ 
     </div>
     <div class="mb-3">
-        Your morning mood? 
-        <button id="vibe" name="vibe" type="submit" value="1">&#128518</button> 
+        <p>Your morning mood?</p>
+        <!-- <button id="vibe" name="vibe" type="submit" value="1">&#128518</button> 
         <button id="vibe" name="vibe" type="submit" value="2">&#128522</button> 
         <button id="vibe" name="vibe" type="submit" value="3">&#128528</button> 
         <button id="vibe" name="vibe" type="submit" value="4">&#128554</button> 
         <button id="vibe" name="vibe" type="submit" value="5">&#128579</button> 
-        <button id="vibe" name="vibe" type="submit" value="6">&#128580</button> 
+        <button id="vibe" name="vibe" type="submit" value="6">&#128580</button>  -->
+        <input type="radio" id="vibe" name="vibe" value="10">
+        <label for="html">&#128518</label><br>
+        <input type="radio" id="vibe" name="vibe" value="11">
+        <label for="html">&#128522</label><br>
+        <input type="radio" id="vibe" name="vibe" value="12">
+        <label for="html">&#128528</label><br>
+        <input type="radio" id="vibe" name="vibe" value="13">
+        <label for="html">&#128554</label><br>
+        <input type="radio" id="vibe" name="vibe" value="13">
+        <label for="html">&#128579</label><br>
+        <input type="radio" id="vibe" name="vibe" value="13">
+        <label for="html">&#1285809</label><br>
+        
     </div>
     <div class="mb-3">
         <label for="formGroupExampleInput2" class="form-label">what are your goals for today?</label>
