--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -29,13 +29,13 @@
         <button id="sleep" name="sleep" type="submit" value="5">Didn't sleep a wink T_T</button> -->
         <input type="radio" id="sleep" name="sleep" value="1">
         <label for="html">BEST NIGHT EVER!</label><br>
-        <input type="radio" id="sleep" name="sleep" value="1">
+        <input type="radio" id="sleep" name="sleep" value="2">
         <label for="html">Good</label><br>
-        <input type="radio" id="sleep" name="sleep" value="1">
+        <input type="radio" id="sleep" name="sleep" value="3">
         <label for="html">Eh...It was okay</label><br>
-        <input type="radio" id="sleep" name="sleep" value="1">
+        <input type="radio" id="sleep" name="sleep" value="4">
         <label for="html">Not so good</label><br>
-        <input type="radio" id="sleep" name="sleep" value="1">
+        <input type="radio" id="sleep" name="sleep" value="5">
         <label for="html">Didn't sleep a wink</label><br>
  
     </div>
@@ -48,17 +48,17 @@
         <button id="vibe" name="vibe" type="submit" value="5">&#128579</button> 
         <button id="vibe" name="vibe" type="submit" value="6">&#128580</button>  -->
         <input type="radio" id="vibe" name="vibe" value="10">
-        <label for="html">&#128518</label><br>
+        <label for="html">&#128518</label>
         <input type="radio" id="vibe" name="vibe" value="11">
-        <label for="html">&#128522</label><br>
+        <label for="html">&#128522</label>
         <input type="radio" id="vibe" name="vibe" value="12">
-        <label for="html">&#128528</label><br>
+        <label for="html">&#128528</label>
         <input type="radio" id="vibe" name="vibe" value="13">
-        <label for="html">&#128554</label><br>
-        <input type="radio" id="vibe" name="vibe" value="13">
-        <label for="html">&#128579</label><br>
-        <input type="radio" id="vibe" name="vibe" value="13">
-        <label for="html">&#1285809</label><br>
+        <label for="html">&#128554</label>
+        <input type="radio" id="vibe" name="vibe" value="14">
+        <label for="html">&#128579</label>
+        <input type="radio" id="vibe" name="vibe" value="15">
+        <label for="html">&#128580</label>
         
     </div>
     <div class="mb-3">
