--- a/final/templates/log.html
+++ b/final/templates/log.html
@@ -18,7 +18,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for diary_log in diary_logs %}
+            {% for diary in diarys %}
                 <tr>
                     <td class="text-start">{{diary.hours_slept}}</td>
                     <td class="text-end">{{diary.snoozes}}</td>
