--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -47,17 +47,17 @@
         <button id="vibe" name="vibe" type="submit" value="4">&#128554</button> 
         <button id="vibe" name="vibe" type="submit" value="5">&#128579</button> 
         <button id="vibe" name="vibe" type="submit" value="6">&#128580</button>  -->
-        <input type="radio" id="vibe" name="vibe" value="10">
+        <input type="radio" id="vibe" name="vibe" value="a">
         <label for="html">&#128518</label>
-        <input type="radio" id="vibe" name="vibe" value="11">
+        <input type="radio" id="vibe" name="vibe" value="b">
         <label for="html">&#128522</label>
-        <input type="radio" id="vibe" name="vibe" value="12">
+        <input type="radio" id="vibe" name="vibe" value="c">
         <label for="html">&#128528</label>
-        <input type="radio" id="vibe" name="vibe" value="13">
+        <input type="radio" id="vibe" name="vibe" value="d">
         <label for="html">&#128554</label>
-        <input type="radio" id="vibe" name="vibe" value="14">
+        <input type="radio" id="vibe" name="vibe" value="e">
         <label for="html">&#128579</label>
-        <input type="radio" id="vibe" name="vibe" value="15">
+        <input type="radio" id="vibe" name="vibe" value="f">
         <label for="html">&#128580</label>
         
     </div>
