--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -28,36 +28,30 @@
         <button id="sleep" name="sleep" type="submit" value="4">Not so good</button>
         <button id="sleep" name="sleep" type="submit" value="5">Didn't sleep a wink T_T</button> -->
         <input type="radio" id="sleep" name="sleep" value="1">
-        <label for="html">BEST NIGHT EVER!</label><br>
+        <label for="html">BEST NIGHT EVER!</label>
         <input type="radio" id="sleep" name="sleep" value="2">
-        <label for="html">Good</label><br>
+        <label for="html">Good</label>
         <input type="radio" id="sleep" name="sleep" value="3">
-        <label for="html">Eh...It was okay</label><br>
+        <label for="html">Eh...It was okay</label>
         <input type="radio" id="sleep" name="sleep" value="4">
-        <label for="html">Not so good</label><br>
+        <label for="html">Not so good</label>
         <input type="radio" id="sleep" name="sleep" value="5">
-        <label for="html">Didn't sleep a wink</label><br>
+        <label for="html">Didn't sleep a wink T_T</label>
  
     </div>
     <div class="mb-3">
         <p>Your morning mood?</p>
-        <!-- <button id="vibe" name="vibe" type="submit" value="1">&#128518</button> 
-        <button id="vibe" name="vibe" type="submit" value="2">&#128522</button> 
-        <button id="vibe" name="vibe" type="submit" value="3">&#128528</button> 
-        <button id="vibe" name="vibe" type="submit" value="4">&#128554</button> 
-        <button id="vibe" name="vibe" type="submit" value="5">&#128579</button> 
-        <button id="vibe" name="vibe" type="submit" value="6">&#128580</button>  -->
-        <input type="radio" id="vibe" name="vibe" value="a">
+        <input type="radio" id="vibe" name="vibe" value="10">
         <label for="html">&#128518</label>
-        <input type="radio" id="vibe" name="vibe" value="b">
+        <input type="radio" id="vibe" name="vibe" value="11">
         <label for="html">&#128522</label>
-        <input type="radio" id="vibe" name="vibe" value="c">
+        <input type="radio" id="vibe" name="vibe" value="12">
         <label for="html">&#128528</label>
-        <input type="radio" id="vibe" name="vibe" value="d">
+        <input type="radio" id="vibe" name="vibe" value="13">
         <label for="html">&#128554</label>
-        <input type="radio" id="vibe" name="vibe" value="e">
+        <input type="radio" id="vibe" name="vibe" value="14">
         <label for="html">&#128579</label>
-        <input type="radio" id="vibe" name="vibe" value="f">
+        <input type="radio" id="vibe" name="vibe" value="15">
         <label for="html">&#128580</label>
         
     </div>
