--- a/final/templates/change_password.html
+++ b/final/templates/change_password.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/changepassword" method="post">
+    <form action="/change_password" method="post">
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="new_password" name="new_password" placeholder="New Password" type="text">
         </div>
