--- a/final/templates/get_resources.html
+++ b/final/templates/get_resources.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <form method="post" action="/Tests/Post/">      
+    <form action="/get_resources" method="post">    
         <fieldset>      
             <legend>what are you interested in learning about?</legend>           
             <input type="checkbox" name="sleep_tips" value="sleep_tips">general sleep tips<br>   
