--- a/final/templates/layout.html
+++ b/final/templates/layout.html
@@ -65,7 +65,7 @@
         </nav>
 
         <!--Page title-->
-        <img src="/static/SleepS50.jpg" alt="SleepS50" width="100%""> 
+        <img src="/static/SleepS50.jpg" alt="SleepS50" width="100%"> 
 
         {% if get_flashed_messages() %}
         <header>
