--- a/final/templates/changed.html
+++ b/final/templates/changed.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block main %}
-<p>Password Successfully Changed! :)</p>
+    <img src="/static/passwordbunny.jpg" alt="password bunny" width="75%">
 {% endblock %}
