--- a/final/templates/change_password.html
+++ b/final/templates/change_password.html
@@ -7,10 +7,10 @@
 {% block main %}
     <form action="/change_password" method="post">
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="new_password" name="new_password" placeholder="New Password" type="text">
+            <input class="form-control mx-auto w-auto" id="new_password" name="new_password" placeholder="new password" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="new_password_confirmation" name="new_password_confirmation" placeholder="New Password Confirmation" type="text">
+            <input class="form-control mx-auto w-auto" id="new_password_confirmation" name="new_password_confirmation" placeholder="confirm new password" type="text">
         </div>
         <button class="btn btn-primary" type="submit">Change Password</button>
     </form>
