--- a/final/templates/get_resources.html
+++ b/final/templates/get_resources.html
@@ -10,7 +10,7 @@
         <fieldset>      
             <legend>what are you interested in learning about?</legend>           
             <input type="checkbox" name="sleep_tips" value="sleep_tips">general sleep tips<br>   
-            <input type="checkbox" name="meditation" value="meditation">meditation<br>    
+            <input type="checkbox" name="meditate" value="meditate">meditation<br>    
             <input type="checkbox" name="music" value="music">music for sleeping<br>
             <input type="checkbox" name="dreams" value="dreams">understanding dreams<br>            
             <br>      
