--- a/final/templates/get_resources.html
+++ b/final/templates/get_resources.html
@@ -9,10 +9,10 @@
     <form action="/get_resources" method="post">    
         <fieldset>      
             <legend>what are you interested in learning about?</legend>           
-            <input type="checkbox" name="sleep_tips" value="sleep_tips">general sleep tips<br>   
-            <input type="checkbox" name="meditate" value="meditate">meditation<br>    
-            <input type="checkbox" name="music" value="music">music for sleeping<br>
-            <input type="checkbox" name="dreams" value="dreams">understanding dreams<br>            
+            <input type="checkbox" name="sleep" value="clicked">general sleep tips<br>   
+            <input type="checkbox" name="meditate" value="clicked">meditation<br>    
+            <input type="checkbox" name="music" value="clicked">music for sleeping<br>
+            <input type="checkbox" name="dreams" value="clicked">understanding dreams<br>            
             <br>      
             <button class="btn btn-primary" type="submit">get some resources!</button>     
         </fieldset>      
