--- a/final/templates/index.html
+++ b/final/templates/index.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="row">
                   <div class="col">
-                    <a href="/register" class="button">register</a>
+                    <a href="/change_password" class="button">change password</a>
                   </div>
                   <div class="col">
                     <a href="/login" class="button">log in</a>
