--- a/final/templates/resources.html
+++ b/final/templates/resources.html
@@ -7,18 +7,72 @@
 {% block main %}
 <p>
     these articles might help! :) <br>
+    {{sleep}}
+    {{meditation_tips}}
+    {{music}}
+    {{dreams_tips}}
+<!-- 
+    <table class="table tablestriped">
+        <thead>
+            <tr>
+                <th class="text-start">source</th>
+                <th class="text-start">link</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="text-start">{{sleep_tips.source}}</td>
+                <td class="text-start">{{sleep_tips.link}}</td>
+            </tr>
+        </tbody>
+        <br>
+    </table>
 
-    sleeping tips:
-    {{sleep}}<br>
+    <table class="table tablestriped">
+        <thead>
+            <tr>
+                <th class="text-start">source</th>
+                <th class="text-start">link</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="text-start">{{meditation_tips.source}}</td>
+                <td class="text-start">{{meditation_tips.link}}</td>
+            </tr>
+        </tbody>
+    </table>
 
-    meditation tips:
-    {{meditate}}<br>
+    <table class="table tablestriped">
+        <thead>
+            <tr>
+                <th class="text-start">source</th>
+                <th class="text-start">link</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="text-start">{{music.source}}</td>
+                <td class="text-start">{{music.link}}</td>
+            </tr>
+        </tbody>
+    </table>
 
-    music tips:
-    {{music}}<br>
+    <table class="table tablestriped">
+        <thead>
+            <tr>
+                <th class="text-start">source</th>
+                <th class="text-start">link</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="text-start">{{dreams_tips.source}}</td>
+                <td class="text-start">{{dreams_tips.link}}</td>
+            </tr>
+        </tbody>
+    </table> -->
 
-    dreams tips:
-    {{dreams}}<br>
 </p>
     
 {% endblock %}
