--- a/final/templates/analysis.html
+++ b/final/templates/analysis.html
@@ -6,5 +6,12 @@
 
 {% block main %}
 
-Average Hours Slept : {{avg_hours}}
+Average Hours Slept : {{avg_hours}} <br>
+Average Snoozes : {{avg_snoozes}} <br>
+
+Sleep Log: <br>
+<canvas id="lineChart"></canvas>
+
+{% endblock %}
+
 
