--- a/final/templates/layout.html
+++ b/final/templates/layout.html
@@ -30,6 +30,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 
+        <!-- Bootstrap JS-->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+        <!--JAVA for Sleep Analysis-->
+        <script src=js/analysisdata.js></script>
+
         <link href="/static/styles.css" rel="stylesheet">
 
         <title>SleepS50 {% block title %}{% endblock %}</title>
@@ -48,6 +55,7 @@
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/diary">diary</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/analysis">analysis</a></li>
                             <li class="nav-item"><a class="nav-link" href="/log">log</a></li>
                             <li class="nav-item"><a class="nav-link" href="/get_resources">resources</a></li>
                             <li class="nav-item"><a class="nav-link" href="/change_password">change password</a></li>
