--- a/final/templates/resources.html
+++ b/final/templates/resources.html
@@ -5,6 +5,24 @@
 {% endblock %}
 
 {% block main %}
+    <p>we hope these help!</p>
+    <table class="table tablestriped">
+        <thead>
+            <tr>
+                <th class="text-start">source</th>
+                <th class="text-start">link</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for tips in tips %}
+            <tr>
+                <td class="text-start">{{tips.source}}</td>
+                <td class="text-start">{{tips.link}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    
     <!-- <p>
         these articles might help! :) <br>
         Sleep : {{sleep_tips}}<br>
@@ -12,7 +30,13 @@
         Music : {{music}}<br>
         Dreams : {{dreams_tips}}<br>
     </p> -->
-    <p>Sleep tips: </p>
+    <p> If you need help waking up... try these ringtones!</p> <br>
+    <audio controls="controls" controls="download"> <br>
+        <source src="CS50 Intro Theme Song.ogg" type="audio/ogg" />
+      <source src="CS50 Intro Theme Song.mp3" type="audio/mp3" /><br>
+      </audio>
+      <a href="CS50 Intro Theme Song.mp3">Download audio </a>
+    <!-- <p>Sleep tips: </p>
     <table class="table tablestriped">
         <thead>
             <tr>
@@ -83,5 +107,5 @@
             </tr>
             {% endfor %}
         </tbody>
-    </table> 
+    </table>  -->
 {% endblock %}   
